<resources>
    <string name="app_name">MyFinance</string>
    <string name="addIncome">Add Income</string>
    <string name="addExpense">Add Expense</string>
    <string name="categoriesManagement">Categories Management</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="transactionsHistory">Transactions History</string>
    <string name="currentBalance">Your current balance is:</string>
    <string name="euro">" €"</string>
    <string name="expenses">Expenses</string>
    <string name="expense">Expense</string>
    <string name="incomes">Incomes</string>
    <string name="income">Income</string>
    <string name="addANewCategory">Add a new Category</string>
    <string name="deleteTransaction">Delete Transaction</string>
    <string name="editTransaction">Edit Transaction</string>
    <string name="enterAValidCategoryName">The category name must contain at least 3 characters</string>
    <string name="thisCategoryAlreadyExists">This category already exists</string>
    <string name="all">"        All       "</string>
    <string name="welcome">Welcome!</string>
    <string name="balance">"Balance: "</string>
    <string name="goBack">Go back</string>
    <string name="transaction">Transaction</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="emptyString">""</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="transactionDate">Transaction Date</string>
    <string name="transactionTime">Transaction Time</string>
    <string name="transactionAmount">Transaction Amount</string>
    <string name="transactionDescription">Transaction Description</string>
    <string name="checkTime">Please check the time format (Ex. 01:23)</string>
    <string name="checkAmount">Please check the amount format (Ex. 123.45)</string>
    <string name="checkDate">Please check the date format (Ex. 4 Mar 21)</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="editPicture">Edit Picture</string>
    <string name="enterName">Enter your name</string>
    <string name="enterEmail">Enter your E-Mail</string>
    <string name="profileManagement">Profile Management</string>
    <string name="lettersAmountError">The name must contain 3 to 15 letters</string>
    <string name="charsSetError">The name must only contain letters, numbers and underscore</string>
    <string name="emailIsInvalid">The entered email is incorrect</string>
    <string name="chooseAnImageSource">Choose an Image Source</string>
    <string name="enter">Enter</string>
    <string name="enter_your_pin_code">Enter Your Pin Code</string>
    <string name="clear">Clear</string>
    <string name="backspace">backspace</string>
    <string name="enterPin">Enter your Pin</string>
    <string name="repeat">Repeat</string>
    <string name="old_pin">Old Pin</string>
    <string name="apply_new_pin">Apply new pin</string>
    <string name="new_pin">New Pin</string>
    <string name="pin">PIN</string>
    <string name="pin_management">Pin Management</string>
    <string name="nameLengthError">Name must contain 3 to 15 letters</string>
    <string name="nameValidationError">Name must only contain numbers and letters</string>
    <string name="emailValidationError">Check your e-mail format</string>
    <string name="help">Help and Support</string>
    <string name="emailSupport"><u>E-mail: best.support@ever.com</u></string>
    <string name="phoneSupport"><u>Phone: +49(090)939-99-97</u></string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="contact_information">Contact Information</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_form">Feedback Form</string>
    <string name="your_name">Your Name:</string>
    <string name="email">E-mail:</string>
    <string name="name">Name</string>
    <string name="pincode">pinCode</string>
</resources>