<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="65sp"
    android:paddingStart="15sp"
    android:paddingEnd="15sp">

    <TextView
        android:id="@+id/amountTextView"
        android:contentDescription="@string/transaction"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="0sp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="15sp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTransactionImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/deleteTransactionImage"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginEnd="15sp"
        android:contentDescription="@string/deleteTransaction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete" />

    <ImageView
        android:id="@+id/editTransactionImage"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginEnd="15sp"
        android:contentDescription="@string/editTransaction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteTransactionImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit" />

</androidx.constraintlayout.widget.ConstraintLayout>