<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CategoriesManagementActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        android:paddingVertical="8dp">

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        tools:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/activityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoriesManagement"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/backImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>

<com.google.android.material.tabs.TabLayout
android:id="@+id/tabLayout"
android:layout_width="match_parent"
android:layout_height="wrap_content"
app:layout_constraintTop_toBottomOf="@id/topPanel"
app:tabIndicatorAnimationMode="elastic"
app:tabIndicatorColor="@color/red"
app:tabIndicatorFullWidth="true"
app:tabIndicatorGravity="bottom"
app:tabTextColor="@color/tabTextColor"
app:tabSelectedTextColor="@color/tabSelectedTextColor">

<com.google.android.material.tabs.TabItem
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/expenses" />

<com.google.android.material.tabs.TabItem
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/incomes" />
</com.google.android.material.tabs.TabLayout>

    <!-- Ввод новой категории -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/inputBackgroundColor"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/categoriesRecyclerView"
        app:layout_constraintTop_toBottomOf="@id/tabLayout">

        <EditText
            android:id="@+id/addNewCategoryInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/addANewCategory"
            android:inputType="text"
            android:paddingHorizontal="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addNewCategoryImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/addNewCategoryImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/addANewCategory"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_add_circle_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<androidx.recyclerview.widget.RecyclerView
android:id="@+id/categoriesRecyclerView"
android:layout_width="match_parent"
android:layout_height="0dp"
app:layout_constraintTop_toBottomOf="@id/constraintLayout"
app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
